using CustomLib.Models.Issues;

namespace CustomLib.Interfaces
{
    public interface IssuesInterface : AbstractInterface<IssueRead, IssueQuery, IssueCreate, IssueUpdate>
    {

    }
}
